--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -17,6 +17,17 @@
 					<% } %>
 					<% if (column.main_image.caption) { %><p class="ap-image"><%= column.main_image.caption %></p><% } %>
 				</div>
+				<div class="social-share">
+
+			    <a href="https://twitter.com/intent/tweet?text=<%= column.title %>&amp;url=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>"  class="social-button twitter">
+					  <span class="fa fa-twitter"></span> Share on Twitter
+					</a>
+
+			    <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>" onclick="window.open(this.href, '', 'height=279,width=575'); return false;" class="social-button facebook">
+					  <span class="fa fa-facebook"></span> Share on Facebook
+					</a>
+
+				</div>
 
 				<div class="column-content-wrapper cf">
 					<% column.data.forEach(function(item){ %>
@@ -58,7 +69,21 @@
 			</div>
 			<% } %>
 		</div>
+		<div class="row">
+			<div class="social-share big">
+
+		    <a href="https://twitter.com/intent/tweet?text=<%= column.title %>&amp;url=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>"  class="social-button twitter">
+				  <span class="fa fa-twitter"></span> Share on Twitter
+				</a>
+
+		    <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>" onclick="window.open(this.href, '', 'height=279,width=575'); return false;" class="social-button facebook">
+				  <span class="fa fa-facebook"></span> Share on Facebook
+				</a>
+
+			</div>
+		</div>
 	</div>
+
 </div>
 
 
