--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -19,7 +19,7 @@
 				</div>
 				<div class="social-share">
 
-			    <a href="https://twitter.com/intent/tweet?text=<%= column.title %>&amp;url=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>"  class="social-button twitter">
+			    <a href="https://twitter.com/intent/tweet?text=<%= column.title %>&amp;url=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>"  class="social-button twitter" target="_blank">
 					  <span class="fa fa-twitter"></span> Share on Twitter
 					</a>
 
@@ -72,7 +72,7 @@
 		<div class="row">
 			<div class="social-share big">
 
-		    <a href="https://twitter.com/intent/tweet?text=<%= column.title %>&amp;url=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>"  class="social-button twitter">
+		    <a href="https://twitter.com/intent/tweet?text=<%= column.title %>&amp;url=http%3A%2F%2Fwww.footballbyfootball.com%2Fcolumn%2F<%= column.slug %>"  class="social-button twitter" target="_blank">
 				  <span class="fa fa-twitter"></span> Share on Twitter
 				</a>
 
