Comments through Disqus

--- a/assets/css/wysihtml5.css
+++ b/assets/css/wysihtml5.css
@@ -81,3 +81,15 @@ a:hover {
   color: #ad1a19;
   text-decoration: underline;
 }
+
+.pull-quote, blockquote {
+  border: 5px solid red;
+  border-right: none;
+  border-left: none;
+  padding: 20px 0;
+  color: #999;
+  font-size: 24px;
+  text-align: center;
+  margin: 30px 0;
+  font-size: 25px;
+}
