--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -65,6 +65,18 @@
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</div>
+					<div class="under-author">
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- Mobile Ad -->
+						<ins class="adsbygoogle"
+						     style="display:block"
+						     data-ad-client="ca-pub-2768251721679098"
+						     data-ad-slot="6838992768"
+						     data-ad-format="auto"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</div>
 				</div>
 			</div>
 			<% } %>
