--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -54,7 +54,7 @@
 							<%- column.player.description %>
 						</div>
 					</div>
-					<div class="under-author">
+					<div class="under-author desktop">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- Column-Player Ad -->
 						<ins class="adsbygoogle"
@@ -65,7 +65,7 @@
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</div>
-					<div class="under-author">
+					<div class="under-author mobile">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- Mobile Ad -->
 						<ins class="adsbygoogle"
