--- a/views/header.ejs
+++ b/views/header.ejs
@@ -58,6 +58,8 @@
 			<div class="logo"><a href="/"><img src="/img/logo-blackbanner.png" alt=""></a></div>
 		<% } %>
 			<div class="right-side">
+				<a href="/lockerrooms" class="article-links">Locker Rooms</a>
+				<a href="/columns" class="article-links">Columns</a>
 				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links"><span class="fa fa-twitter"></span></a>
 				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links"><span class="fa fa-facebook"></span></a>
 			</div>
