--- a/views/player-new.ejs
+++ b/views/player-new.ejs
@@ -7,11 +7,11 @@
 			<form action="/player/new" method="post">
         <div class="post-form">
         	<p>
-        		<input type="text" name="name" placholder="Name" >
+        		<input type="text" name="name" placeholder="Name" >
         	</p>
         	
 					<p>
-						<input type="text" name="image_url" placholder="Image URL" >
+						<input type="text" name="image_url" placeholder="Image URL" >
 					</p>
 					<div class="player-editor-wrapper">
 	          <div id='main-toolbar' class="toolbar">
