--- a/views/player-edit.ejs
+++ b/views/player-edit.ejs
@@ -7,11 +7,11 @@
 			<form action="/player/<%= player.id %>/edit" method="post">
         <div class="post-form">
         	<p>
-        		<input type="text" name="name" placholder="Name" value="<%= player.name %>">
+        		<input type="text" name="name" placeholder="Name" value="<%= player.name %>">
         	</p>
         	
 					<p>
-						<input type="text" name="image_url" placholder="Image URL" value="<%= player.image_url %>">
+						<input type="text" name="image_url" placeholder="Image URL" value="<%= player.image_url %>">
 					</p>
 					<div class="player-editor-wrapper">
 	          <div id='main-toolbar' class="toolbar">
