Footer changes, links rearrangment, title validation on column and lockerroom, and redis session storage

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,19 +1,7 @@
 	<div class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<h3>About Football by Football</h3>
-					<p>FootballByFootball.com is a football analysis website providing unique player-writer generated content; owned & operated by experienced football players. 
-					 
-					<p>Experience counts immensely—especially in analyzing the world’s most complex sport.  A tiny percentage of the writing population has football experience.  This is a disparity we aim to change.     
-					 
-					<p>Football fans crave insight.  So, when the world orders a steak, you don’t butcher a chicken. 
-					 
-					<p>Welcome to FootballByFootball.com.
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-4">
 					<h3>Join Our Newsletter</h3>
 					<form action="http://footballbyfootball.createsend.com/t/t/s/ijjdkl/" method="post">
 				    <p class="cf">
@@ -28,6 +16,35 @@
 				        <button type="submit">Subscribe</button>
 				    </p>
 					</form>
+				</div>
+				<div class="col-md-8">
+					<h3>About Football by Football</h3>
+					<p>FootballByFootball.com is a football analysis website providing unique player-writer generated content; owned & operated by experienced football players. 
+					 
+					<p>Experience counts immensely—especially in analyzing the world’s most complex sport.  A tiny percentage of the writing population has football experience.  This is a disparity we aim to change.     
+					 
+					<p>Football fans crave insight.  So, when the world orders a steak, you don’t butcher a chicken. 
+					 
+					<p>Welcome to FootballByFootball.com.
+				</div>
+			</div>
+			<div class="row">
+				<hr>
+				<div class="col-md-12" style="font-size: 0.7em;">
+					<p>© Football By Football, LLC  
+					<p>All Rights Reserved
+					<p>No part of this website or any of its contents may be reproduced, copied, modified or adapted, without the prior written consent of the author, unless otherwise indicated for stand-alone materials.
+
+					<p>You may share this website by any of the following means:
+					<ol>
+						<li>Using any of the share icons found on the page (Twitter, Facebook, Google+, Reddit, etc);</li>
+						<li>Providing a back-link or the URL of the content you wish to disseminate; and</li>
+						<li>You may quote extracts from the website with attribution to footballbyfootball.com</li>
+					</ol>
+
+					<p>For any other mode of sharing, please contact the owner at <a href="mailto:mchatham58@live.com">mchatham58@live.com</a>
+
+					<p>Commercial use and distribution of the contents of the website is not allowed without express and prior written consent of the owner.
 				</div>
 			</div>
 		</div>
