--- a/views/header.ejs
+++ b/views/header.ejs
@@ -43,7 +43,7 @@
 				<a href="/admin">Admin</a>
 				<a href="/column/new">New Column</a>
 				<a href="/lockerroom/new">New LockerRoom</a>
-				<a href="/player/new">New Player</a>
+				<a href="/link/new">New Link</a>
 			</div>
 		</div>
 	<% } %>
