--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -47,6 +47,15 @@
 					<p>Commercial use and distribution of the contents of the website is not allowed without express and prior written consent of the owner.
 				</div>
 			</div>
+			<div class="row">
+				<hr>
+				<div class="col-md-12" style="font-size: 0.7em;">
+					<h4>Privacy Policy</h4>
+					<p>We use third-party advertising companies to serve ads when you visit our Web site. 
+					These companies may use aggregated information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, 
+					please see: <a href="http://www.networkadvertising.org/managing/opt_out.asp">http://www.networkadvertising.org/managing/opt_out.asp</a></p>
+				</div>
+			</div>
 		</div>
 		
 	</div>
