--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -59,6 +59,7 @@
 		</div>
 		
 	</div>
+	<script src="http://network.yardbarker.com/network/ybn_pixel/12986" type="text/javascript"></script> <noscript></noscript>
 		
 	<script src="/js/app.js"></script>
 	<script>
