--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -527,10 +527,11 @@ img {
   background-position: center bottom;
   padding: 20px 0; }
   .masthead .big-logo {
-    width: 1000px;
+    width: 758px;
     max-width: 100%;
     display: table;
-    margin: auto; }
+    margin: auto;
+    padding: 0 15px; }
 
 .topbar {
   background: black;
@@ -1233,10 +1234,15 @@ a:hover {
   display: inline-block;
   float: left; }
 
+.mini-image {
+  min-height: 200px;
+  background-size: cover;
+  background-position: center; }
+
 .lockerroom-sidebar, .home-column-sidebar {
   text-align: center;
   color: white;
-  margin: 20px 0;
+  margin: 0;
   padding: 5px 15px 0;
   background: #222; }
   .lockerroom-sidebar a, .lockerroom-sidebar a:hover, .home-column-sidebar a, .home-column-sidebar a:hover {
@@ -1303,6 +1309,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .medium-article .headline .inner-content .copy h3 {
   margin-top: 0; }
+
+.top-banner-container {
+  display: block;
+  margin: auto;
+  width: 728px;
+  max-width: 100%;
+  overflow: hidden; }
 
 @media (max-width: 991px) {
   .medium-article {
