--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -22,9 +22,7 @@
 								</div>
 							<% } else { %>
 								<div class="row small-entry">
-									<div class="col-md-4">
-										<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>" />
-									</div>
+									<div class="col-md-4 mini-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>);"></div>
 									<div class="col-md-8">
 										<h3><a href="/column/<%= entry.slug %>"><%= entry.title %></a></h3>
 										<h5 class="grey"><%= entry.updated_at %></h5>
