--- a/views/columns.ejs
+++ b/views/columns.ejs
@@ -8,9 +8,7 @@
 			<div class="col-md-8">
 					<%	columns.forEach(function(entry, index){ %>
 						<div class="row small-entry">
-							<div class="col-md-4">
-								<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>" />
-							</div>
+							<div class="col-md-4 mini-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>);"></div>
 							<div class="col-md-8">
 								<h3><a href="/column/<%= entry.slug %>"><%= entry.title %></a></h3>
 								<h5 class="grey"><%= entry.updated_at %></h5>
