--- a/views/header.ejs
+++ b/views/header.ejs
@@ -57,7 +57,9 @@
 </head>
 <body class="<% if (locals.page_type) {%><%= page_type %><%} %>" >
 	<% if (locals.page_type && page_type =='home') {%>
-		<script src="http://www.yardbarker.com/network.js" type="text/javascript"></script><script defer="false" type="text/javascript">_siteid = 12986; yardbar(); </script>
+		<div class="yardbarker-header">
+			<script src="http://www.yardbarker.com/network.js" type="text/javascript"></script><script defer="false" type="text/javascript">_siteid = 12986; yardbar(); </script>
+		</div>
 	<div class="masthead">
 		<div class="top-banner-container">	
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
