--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1750,9 +1750,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 
 @media (max-width: 480px) {
-	.yardbarker-header {
+	body {
+		margin-top: 0 !important;
+	}
+	body > iframe:first-child {
 		display: none;
 	}
+
 	.lockerroom {
 		.lockerroom-header {
 			height: auto;
