Yardbarker at bottom. Removed Header strip for YB

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -16,6 +16,7 @@
 				        <button type="submit">Subscribe</button>
 				    </p>
 					</form>
+					<a href="http://www.yardbarker.com/"><img border="0" width="100" src="http://www.yardbarker.com/images/ybn/badge_100.gif" height="50"/></a>
 				</div>
 				<div class="col-md-8">
 					<h3>About Football by Football</h3>
