--- a/views/rss.ejs
+++ b/views/rss.ejs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:yb="http://www.yardbarker.com/rss/overview/">
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0">
   <channel>
     <title>Football by Football</title>
     <link>http://www.footballbyfootball.com/rss</link>
