--- a/views/rss.ejs
+++ b/views/rss.ejs
@@ -7,6 +7,10 @@
     <language>en-us</language>
     <copyright>Copyright © 2014 Football by Football, LLC. All rights reserved</copyright>
     <icon>http://www.footballbyfootball.com/img/logo-masthead.png</icon>
+    <image>
+      <url>http://www.footballbyfootball.com/img/logo-masthead.png</url>
+      <title>Football by Football</title>
+    </image>
     <% posts.forEach(function(entry){ %>
       <item>
         <title><%= entry.title %></title>
@@ -23,17 +27,17 @@
             <link><%= 'https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer-small.jpg'%></link>
           </image>
         <% } %>
-        <description>
+        <description type="html">
           <![CDATA[
             <% if (entry.type != 'lockerroom') { %>
               <% entry.data.forEach(function(content){ %>
                 <% if (content.type == 'content') { %> 
                   <%- content.content %>
                 <% } else if (content.type == 'image') { %>
-                  <image>
-                    <url><%= 'https://s3.amazonaws.com/footballbyfootball-dev' + content.image_url %></url>
-                    <title><%= content.caption %></title>
-                  </image>
+                    <img
+                      src="<%= 'https://s3.amazonaws.com/footballbyfootball-dev' + content.image_url %>"
+                      alt="<%= content.caption %>">
+                    </img>
                 <% } %>
               <% }); %>
             <% } else if (entry.type == 'lockerroom') { %>
@@ -42,10 +46,10 @@
                   <% if (content.type == 'content') { %> 
                     <%- content.content %>
                   <% } else if (content.type == 'image') { %>
-                    <image>
-                      <url><%= 'https://s3.amazonaws.com/footballbyfootball-dev' + content.image_url %></url>
-                      <title><%= content.caption %></title>
-                    </image>
+                    <img
+                      src="<%= 'https://s3.amazonaws.com/footballbyfootball-dev' + content.image_url %>"
+                      alt="<%= content.caption %>">
+                    </img>
                   <% } %>
                 <% }); %>
               <% }); %>
